[gd_scene load_steps=5 format=2]

[ext_resource path="res://Imagenes/Huella/HuellaRoja.png" type="Texture" id=1]
[ext_resource path="res://Imagenes/Huella/HuellaAzul.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Huella.gd" type="Script" id=3]
[ext_resource path="res://Imagenes/Huella/HuellaVerde.png" type="Texture" id=4]

[node name="Huella" type="Node2D"]
script = ExtResource( 3 )

[node name="HuellaVerde" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="HuellaRoja" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="HuellaAzul" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
